After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 576477 - links to devhelp documentation don't work
links to devhelp documentation don't work
Status: RESOLVED FIXED
Product: glade
Classification: Applications
Component: general
3.6.x
Other All
: Normal normal
: ---
Assigned To: Glade 3 Maintainers
Glade 3 Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-03-23 20:05 UTC by Pedro Villavicencio
Modified: 2010-01-28 04:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix shortcuts to devhelper documentation (981 bytes, patch)
2010-01-20 02:06 UTC, Javier Jardón (IRC: jjardon)
none Details | Review
Fix shortcuts to devhelper documentation.v2 (1.66 KB, patch)
2010-01-20 12:10 UTC, Javier Jardón (IRC: jjardon)
committed Details | Review

Description Pedro Villavicencio 2009-03-23 20:05:15 UTC
this report has been filed here:

https://bugs.edge.launchpad.net/glade-3/+bug/347520

"the Shortcut to the devhelper documentation don't work

For example, when you rigth-click in a widget and click on read documentation, glade points you to page:GtkDialog, but it don't show anything.

if a write manually GtkDialog, the manual page shows"

Is this a glade-3 or a devhelp issue?

Thanks in advance,
Comment 1 Tristan Van Berkom 2009-03-23 21:23:33 UTC
I'll test this when I boot up from the linux box but
there may be some issues I already know about...

as far as I know basic page references should still work, but;
in this release of GTK+ there has been a few new interfaces added,
which take ownership of properties instead of the implementing widgets
who originally documented them, so - this breaks DevHelp lookups on
alot of properties - for this I am gambling that 3.6 is released on
peoples computers along with updated GTK+ documentation (the breakage
I know of only exists with skewed documentation version/Glade version).
Comment 2 Lev Abashkin 2009-04-14 10:53:38 UTC
I have the same behavior with glade 3.6 and devhelp 0.22. All doc packages are from ubuntu 8.10 repositories.
Comment 3 Javier Jardón (IRC: jjardon) 2009-04-27 02:45:54 UTC
Confirmed in final jaunty release:

glade 3.6.1 and devhelp 0.22
Comment 4 Javier Jardón (IRC: jjardon) 2010-01-20 02:06:18 UTC
Created attachment 151802 [details] [review]
Fix shortcuts to devhelper documentation

Here the trivial patch

commit 810c5b3c335cd09d750b933720ae4d222aaa44eb
Author: Javier Jardón <jjardon@gnome.org>
Date:   Wed Jan 20 03:01:34 2010 +0100

    Fix shortcuts to devhelper documentation
    
    Remove the trailing whitespace of the string passed to devhelp
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=576477

diff --git a/gladeui/glade-utils.c b/gladeui/glade-utils.c
index 276c656..d17f330 100644
--- a/gladeui/glade-utils.c
+++ b/gladeui/glade-utils.c
@@ -1661,7 +1661,7 @@ glade_util_search_devhelp (const gchar *book,
        g_return_if_fail (glade_util_have_devhelp ());
 
        if (book) book_comm = g_strdup_printf ("book:%s ", book);
-       if (page) page_comm = g_strdup_printf ("page:%s ", page);
+       if (page) page_comm = g_strdup_printf ("page:%s", page);
 
        string = g_strdup_printf ("devhelp -s \"%s%s%s\"", 
                                   book_comm ? book_comm : "",
Comment 5 Tristan Van Berkom 2010-01-20 11:48:55 UTC
 a) does that really fix the problem for page sensitive searching ?
    (and show the top of page for a said widget class ?)

 b) do the property searches still work ?

My guess is that the property searches will break 
if the trailing space after the "book:%s" is missing
before the search string.
Comment 6 Javier Jardón (IRC: jjardon) 2010-01-20 12:10:19 UTC
Created attachment 151829 [details] [review]
Fix shortcuts to devhelper documentation.v2

> b) do the property searches still work ?

Oops, here a new patch to fix this
Comment 7 Tristan Van Berkom 2010-01-28 03:12:02 UTC
Review of attachment 151829 [details] [review]:

Looks fine, please commit, sorry I havent taken time to compile and test it but it
looks like a harmless patch anyway.
Comment 8 Javier Jardón (IRC: jjardon) 2010-01-28 04:12:32 UTC
Comment on attachment 151829 [details] [review]
Fix shortcuts to devhelper documentation.v2

commit 22788e3f90e2285fd9db92e60cbadac5cc6d62ee
Comment 9 Javier Jardón (IRC: jjardon) 2010-01-28 04:13:05 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release.

Thanks Tristan for the review!