Fix shortcuts to devhelper documentation

Remove the trailing whitespace of the string passed to devhelp

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=576477